# geant4-showerlab

./: CMakeLists.txt  README.md  main.cc
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
include/Data/: EventData.hh
include/DetectorSD/: CherenkovSD.hh  EcalCrystalSD.hh  ScintillatorSD.hh  TrackerSD.hh
macros/: init.mac  run.mac  vis.mac
src/: ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/Data/: EventData.cc
src/DetectorSD/: CherenkovSD.cc  EcalCrystalSD.cc  ScintillatorSD.cc  TrackerSD.cc
